--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@elegante/sdk": ["packages/sdk/src/index.ts"],
+      "@elegante/server": ["packages/server/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
