--- a/package.json
+++ b/package.json
@@ -4,24 +4,20 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~15.0.0",
     "@angular/animations": "~15.0.0",
+    "@angular/cli": "~15.0.0",
     "@angular/common": "~15.0.0",
     "@angular/compiler": "~15.0.0",
+    "@angular/compiler-cli": "~15.0.0",
     "@angular/core": "~15.0.0",
     "@angular/forms": "~15.0.0",
+    "@angular/language-service": "~15.0.0",
     "@angular/platform-browser": "~15.0.0",
     "@angular/platform-browser-dynamic": "~15.0.0",
     "@angular/router": "~15.0.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~15.0.0",
-    "@angular/cli": "~15.0.0",
-    "@angular/compiler-cli": "~15.0.0",
-    "@angular/language-service": "~15.0.0",
     "@nrwl/angular": "^15.2.1",
     "@nrwl/cli": "15.2.1",
     "@nrwl/esbuild": "15.2.1",
@@ -32,11 +28,13 @@
     "@nrwl/node": "^15.2.1",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.2.1",
+    "@types/cors": "^2.8.12",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
     "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
     "esbuild": "^0.15.7",
     "eslint": "~8.15.0",
@@ -48,8 +46,11 @@
     "mongodb": "^4.12.1",
     "nx": "15.2.1",
     "prettier": "^2.6.2",
+    "rxjs": "~7.5.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "tslib": "^2.3.0",
+    "typescript": "~4.8.2",
+    "zone.js": "~0.11.4"
   }
 }
