feat: add aggregation

--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -10,7 +10,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "files": [],
-  "include": [],
+  "include": ["package.json"],
   "references": [
     {
       "path": "./tsconfig.lib.json"
