--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "mongodb": "^4.12.1",
     "nx": "15.2.1",
     "prettier": "^2.6.2",
-    "rxjs": "~7.5.0",
+    "rxjs": "^7.5.7",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
