--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "type": "commonjs",
   "dependencies": {
-    "cross-fetch": "^3.1.5"
+    "cross-fetch": "^3.1.5",
+    "rxjs": "^7.5.7"
   }
 }
