--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@nrwl/cli": "15.2.1",
     "@nrwl/esbuild": "15.2.1",
     "@nrwl/eslint-plugin-nx": "15.2.1",
-    "@nrwl/jest": "15.2.1",
+    "@nrwl/jest": "15.2.4",
     "@nrwl/js": "15.2.1",
     "@nrwl/linter": "15.2.1",
-    "@nrwl/node": "^15.2.1",
+    "@nrwl/node": "15.2.4",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.2.1",
     "@types/cors": "^2.8.12",
