--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongodb": "^4.12.1",
+    "@node-rs/bcrypt": "^1.6.1",
     "@elegante/sdk": "latest"
   }
 }
