fix: improve mechanism for caching docs

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@angular/platform-browser": "~15.0.0",
     "@angular/platform-browser-dynamic": "~15.0.0",
     "@angular/router": "~15.0.0",
-    "@node-rs/bcrypt": "^1.6.1",
     "@nrwl/angular": "^15.2.1",
     "@nrwl/cli": "15.2.1",
     "@nrwl/esbuild": "15.2.1",
@@ -32,8 +31,10 @@
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
     "@types/node-fetch": "^2.6.2",
+    "@types/bcryptjs": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
     "esbuild": "^0.15.7",
