--- a/packages/sdk/tsconfig.lib.json
+++ b/packages/sdk/tsconfig.lib.json
@@ -7,6 +7,7 @@
     "types": ["node"],
     "esModuleInterop": true
   },
-  "include": ["**/*.ts", "**/*.d.ts"],
+  "files": ["package.json"],
+  "include": ["**/*.ts", "**/*.d.ts", "package.json"],
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
 }
