--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongodb": "^4.12.1",
-    "@node-rs/bcrypt": "^1.6.1",
+    "rxjs": "^7.5.7",
+    "bcryptjs": "^2.4.3",
     "@elegante/sdk": "latest"
   }
 }
