--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "@nrwl/node": "15.2.4",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.2.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
     "@types/node-fetch": "^2.6.2",
-    "@types/bcryptjs": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "bcryptjs": "^2.4.3",
@@ -41,12 +41,16 @@
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "express": "^4.18.2",
+    "immer": "^9.0.16",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.2",
     "mongodb": "^4.12.1",
     "nx": "15.2.1",
     "prettier": "^2.6.2",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
+    "redux-watch": "^1.2.0",
     "rxjs": "^7.5.7",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
