--- a/apps/angular/project.json
+++ b/apps/angular/project.json
@@ -18,7 +18,7 @@
         "assets": ["apps/angular/src/favicon.ico", "apps/angular/src/assets"],
         "styles": ["apps/angular/src/styles.scss"],
         "scripts": [],
-        "allowedCommonJsDependencies": ["cross-fetch"]
+        "allowedCommonJsDependencies": ["cross-fetch", "redux-watch"]
       },
       "configurations": {
         "production": {
