--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@nrwl/node": "15.2.4",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.2.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
     "@types/node-fetch": "^2.6.2",
+    "@types/redux-watch": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "bcryptjs": "^2.4.3",
@@ -48,7 +50,6 @@
     "mongodb": "^4.12.1",
     "nx": "15.2.1",
     "prettier": "^2.6.2",
-    "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "redux-watch": "^1.2.0",
     "rxjs": "^7.5.7",
