--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nrwl/linter": "15.2.1",
     "@nrwl/node": "15.2.4",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/rollup": "15.2.1",
     "@nrwl/workspace": "15.2.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/bcryptjs": "^2.4.2",
@@ -57,5 +58,6 @@
     "tslib": "^2.3.0",
     "typescript": "~4.8.2",
     "zone.js": "~0.11.4"
-  }
+  },
+  "dependencies": {}
 }
