--- a/apps/angular/tsconfig.app.json
+++ b/apps/angular/tsconfig.app.json
@@ -2,9 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "types": ["node", "jest"],
-    "resolveJsonModule": true,
-    "esModuleInterop": true
+    "types": ["node", "jest"]
   },
   "files": ["src/main.ts"],
   "include": ["src/**/*.d.ts"],
