--- a/apps/express/tsconfig.app.json
+++ b/apps/express/tsconfig.app.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["node"],
-    "esModuleInterop": true,
-    "resolveJsonModule": true
+    "types": ["node"]
   },
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
   "include": ["**/*.ts"]
