--- a/packages/sdk/tsconfig.lib.json
+++ b/packages/sdk/tsconfig.lib.json
@@ -1,11 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "composite": true,
     "outDir": "../../dist/out-tsc",
     "declaration": true,
-    "types": ["node"],
-    "esModuleInterop": true
+    "types": ["node"]
   },
   "files": ["./src/package.json"],
   "include": ["**/*.ts", "**/*.d.ts", "./src/package.json"],
