--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,12 +1,19 @@
 {
   "name": "@elegante/server",
-  "version": "0.0.1",
+  "version": "0.0.6",
   "type": "commonjs",
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
+  "files": [
+    "src",
+    "sdk",
+    "package.json",
+    "README.md"
+  ],
   "dependencies": {
+    "rxjs": "^7.5.7",
     "express": "^4.18.2",
     "mongodb": "^4.12.1",
-    "rxjs": "^7.5.7",
-    "bcryptjs": "^2.4.3",
-    "@elegante/sdk": "latest"
+    "bcryptjs": "^2.4.3"
   }
 }
