--- a/packages/server/project.json
+++ b/packages/server/project.json
@@ -5,13 +5,17 @@
   "projectType": "library",
   "targets": {
     "build": {
-      "executor": "@nrwl/esbuild:esbuild",
+      "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/server",
         "main": "packages/server/src/index.ts",
         "tsConfig": "packages/server/tsconfig.lib.json",
-        "assets": ["packages/server/*.md"]
+        "packageJson": "packages/server/package.json",
+        "updateBuildableProjectDepsInPackageJson": true,
+        "buildableProjectDepsInPackageJsonType": "dependencies",
+        "external": "all",
+        "externalBuildTargets": ["@elegante/sdk"]
       }
     },
     "publish": {
