--- a/packages/server/tsconfig.lib.json
+++ b/packages/server/tsconfig.lib.json
@@ -3,10 +3,9 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "declaration": true,
-    "types": ["node", "jest"],
-    "resolveJsonModule": true,
-    "esModuleInterop": true
+    "types": ["node", "jest"]
   },
-  "include": ["**/*.ts"],
+  "files": ["./package.json"],
+  "include": ["**/*.ts", "**/*.d.ts", "./package.json"],
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
 }
