--- a/packages/server/project.json
+++ b/packages/server/project.json
@@ -18,10 +18,25 @@
         "externalBuildTargets": ["@elegante/sdk"]
       }
     },
+    "serve": {
+      "executor": "@nrwl/js:tsc",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/packages/server",
+        "main": "packages/server/src/index.ts",
+        "tsConfig": "packages/server/tsconfig.lib.json",
+        "packageJson": "packages/server/package.json",
+        "updateBuildableProjectDepsInPackageJson": true,
+        "buildableProjectDepsInPackageJsonType": "dependencies",
+        "external": "all",
+        "externalBuildTargets": ["@elegante/sdk"],
+        "watch": true
+      }
+    },
     "publish": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "node tools/scripts/publish.mjs server {args.ver} {args.tag}"
+        "command": "node tools/scripts/publish.mjs server {args.v} {args.tag}"
       },
       "dependsOn": ["build"]
     },
