--- a/packages/browser/src/package.json
+++ b/packages/browser/src/package.json
@@ -2,5 +2,8 @@
   "name": "@elegante/browser",
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
-  "version": "0.0.3"
+  "version": "0.0.5",
+  "dependencies": {
+    "reflect-metadata": "0.1.13"
+  }
 }
