--- a/packages/sdk/src/package.json
+++ b/packages/sdk/src/package.json
@@ -1,8 +1,14 @@
 {
   "name": "@elegante/sdk",
-  "version": "0.0.2",
+  "version": "0.0.6",
   "dependencies": {
     "cross-fetch": "^3.1.5",
     "rxjs": "^7.5.7"
+  },
+  "main": "./index.cjs",
+  "type": "commonjs",
+  "types": "./index.d.ts",
+  "peerDependencies": {
+    "reflect-metadata": "0.1.13"
   }
 }
