--- a/packages/sdk/project.json
+++ b/packages/sdk/project.json
@@ -11,20 +11,13 @@
         "outputPath": "dist/packages/sdk",
         "main": "packages/sdk/src/index.ts",
         "tsConfig": "packages/sdk/tsconfig.lib.json",
-        "project": "packages/sdk/src/package.json"
-      }
-    },
-    "serve": {
-      "executor": "@nrwl/rollup:rollup",
-      "outputs": ["{options.outputPath}"],
-      "options": {
-        "outputPath": "dist/packages/sdk",
-        "main": "packages/sdk/src/index.ts",
-        "tsConfig": "packages/sdk/tsconfig.lib.json",
         "project": "packages/sdk/src/package.json",
-        "watch": true
+        "compiler": "tsc",
+        "format": ["esm", "cjs"],
+        "updateBuildableProjectDepsInPackageJson": false
       }
     },
+
     "publish": {
       "executor": "nx:run-commands",
       "options": {
