--- a/packages/server/project.json
+++ b/packages/server/project.json
@@ -12,27 +12,13 @@
         "main": "packages/server/src/index.ts",
         "tsConfig": "packages/server/tsconfig.lib.json",
         "packageJson": "packages/server/package.json",
-        "updateBuildableProjectDepsInPackageJson": true,
+        "updateBuildableProjectDepsInPackageJson": false,
         "buildableProjectDepsInPackageJsonType": "dependencies",
         "external": "all",
         "externalBuildTargets": ["@elegante/sdk"]
       }
     },
-    "serve": {
-      "executor": "@nrwl/js:tsc",
-      "outputs": ["{options.outputPath}"],
-      "options": {
-        "outputPath": "dist/packages/server",
-        "main": "packages/server/src/index.ts",
-        "tsConfig": "packages/server/tsconfig.lib.json",
-        "packageJson": "packages/server/package.json",
-        "updateBuildableProjectDepsInPackageJson": true,
-        "buildableProjectDepsInPackageJsonType": "dependencies",
-        "external": "all",
-        "externalBuildTargets": ["@elegante/sdk"],
-        "watch": true
-      }
-    },
+
     "publish": {
       "executor": "nx:run-commands",
       "options": {
