--- a/packages/sdk/src/package.json
+++ b/packages/sdk/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elegante/sdk",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "dependencies": {
     "cross-fetch": "^3.1.5",
     "rxjs": "^7.5.7"
@@ -8,5 +8,8 @@
   "types": "./index.d.ts",
   "peerDependencies": {
     "reflect-metadata": "0.1.13"
-  }
+  },
+  "module": "./index.js",
+  "main": "./index.cjs",
+  "type": "module"
 }
