--- a/packages/sdk/src/package.json
+++ b/packages/sdk/src/package.json
@@ -1,14 +1,12 @@
 {
   "name": "@elegante/sdk",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "dependencies": {
     "cross-fetch": "^3.1.5",
-    "rxjs": "^7.5.7"
+    "rxjs": "^7.5.7",
+    "reflect-metadata": "^0.1.13"
   },
   "types": "./index.d.ts",
-  "peerDependencies": {
-    "reflect-metadata": "0.1.13"
-  },
   "module": "./index.js",
   "main": "./index.cjs",
   "type": "module"
