--- a/packages/sdk/project.json
+++ b/packages/sdk/project.json
@@ -13,7 +13,7 @@
         "tsConfig": "packages/sdk/tsconfig.lib.json",
         "project": "packages/sdk/src/package.json",
         "compiler": "tsc",
-        "format": ["esm", "cjs"],
+        "format": ["cjs"],
         "updateBuildableProjectDepsInPackageJson": false
       }
     },
