--- a/packages/sdk/src/package.json
+++ b/packages/sdk/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elegante/sdk",
-  "version": "0.0.14",
+  "version": "0.0.17",
   "dependencies": {
     "cross-fetch": "^3.1.5",
     "rxjs": "^7.5.7",
@@ -8,6 +8,5 @@
   },
   "types": "./index.d.ts",
   "module": "./index.js",
-  "main": "./index.cjs",
-  "type": "commonjs"
+  "main": "./index.cjs"
 }
