--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "~15.0.0",
     "@angular/platform-browser-dynamic": "~15.0.0",
     "@angular/router": "~15.0.0",
+    "@inrupt/jest-jsdom-polyfills": "^1.5.3",
     "@nrwl/angular": "^15.2.1",
     "@nrwl/cli": "15.2.1",
     "@nrwl/esbuild": "15.2.1",
