fix: rollback. we can't really send anything from here

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "tsImportSorter.configuration.formatExports": true,
   "tsImportSorter.configuration.autoFormat": "onSave",
   "tsImportSorter.configuration.exclude": [
     "node_modules",
