--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jest-preset-angular": "~12.2.2",
     "mongodb": "^4.12.1",
     "nx": "15.2.1",
+    "password-validator": "^5.3.0",
     "prettier": "^2.6.2",
     "redux-watch": "^1.2.0",
     "reflect-metadata": "^0.1.13",
