--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,7 @@
     "rxjs": "^7.8.0",
     "express": "^4.18.2",
     "mongodb": "^4.12.1",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "password-validator": "^5.3.0"
   }
 }
