--- a/package.json
+++ b/package.json
@@ -5,31 +5,34 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.0.0",
-    "@angular/animations": "~15.0.0",
-    "@angular/cli": "~15.0.0",
-    "@angular/common": "~15.0.0",
-    "@angular/compiler": "~15.0.0",
-    "@angular/compiler-cli": "~15.0.0",
-    "@angular/core": "~15.0.0",
-    "@angular/forms": "~15.0.0",
-    "@angular/language-service": "~15.0.0",
-    "@angular/platform-browser": "~15.0.0",
-    "@angular/platform-browser-dynamic": "~15.0.0",
-    "@angular/router": "~15.0.0",
+    "@angular-devkit/build-angular": "15.1.6",
+    "@angular-devkit/core": "~15.1.0",
+    "@angular-devkit/schematics": "~15.1.0",
+    "@angular/animations": "15.1.5",
+    "@angular/cli": "~15.1.0",
+    "@angular/common": "15.1.5",
+    "@angular/compiler": "15.1.5",
+    "@angular/compiler-cli": "15.1.5",
+    "@angular/core": "15.1.5",
+    "@angular/forms": "15.1.5",
+    "@angular/language-service": "15.1.5",
+    "@angular/platform-browser": "15.1.5",
+    "@angular/platform-browser-dynamic": "15.1.5",
+    "@angular/router": "15.1.5",
     "@inrupt/jest-jsdom-polyfills": "^1.5.3",
-    "@nrwl/angular": "^15.2.1",
-    "@nrwl/cli": "15.2.1",
-    "@nrwl/esbuild": "15.2.1",
-    "@nrwl/eslint-plugin-nx": "15.2.1",
-    "@nrwl/jest": "15.2.4",
-    "@nrwl/js": "15.2.4",
-    "@nrwl/linter": "15.2.1",
-    "@nrwl/node": "15.2.4",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/rollup": "15.2.1",
-    "@nrwl/workspace": "15.2.1",
+    "@nrwl/angular": "15.7.2",
+    "@nrwl/cli": "15.7.2",
+    "@nrwl/esbuild": "15.7.2",
+    "@nrwl/eslint-plugin-nx": "15.7.2",
+    "@nrwl/jest": "15.7.2",
+    "@nrwl/js": "15.7.2",
+    "@nrwl/linter": "15.7.2",
+    "@nrwl/node": "15.7.2",
+    "@nrwl/nx-cloud": "15.0.3",
+    "@nrwl/rollup": "15.7.2",
+    "@nrwl/workspace": "15.7.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "@schematics/angular": "~15.1.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/jest": "28.1.1",
@@ -41,7 +44,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
-    "esbuild": "^0.15.7",
+    "esbuild": "0.17.5",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "express": "^4.18.2",
@@ -50,7 +53,7 @@
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.2",
     "mongodb": "^4.12.1",
-    "nx": "15.2.1",
+    "nx": "15.7.2",
     "password-validator": "^5.3.0",
     "prettier": "^2.6.2",
     "redux-watch": "^1.2.0",
@@ -61,7 +64,7 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~4.8.2",
+    "ws": "^8.12.1",
     "zone.js": "~0.11.4"
-  },
-  "dependencies": {}
+  }
 }
