--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@inrupt/jest-jsdom-polyfills": "^1.5.3",
     "@nrwl/angular": "15.7.2",
     "@nrwl/cli": "15.7.2",
+    "@nrwl/devkit": "^15.7.2",
     "@nrwl/esbuild": "15.7.2",
     "@nrwl/eslint-plugin-nx": "15.7.2",
     "@nrwl/jest": "15.7.2",
@@ -35,6 +36,7 @@
     "@schematics/angular": "~15.1.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.17",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
     "@types/node-fetch": "^2.6.2",
@@ -42,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "bcryptjs": "^2.4.3",
+    "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
     "esbuild": "0.17.5",
@@ -49,6 +52,7 @@
     "eslint-config-prettier": "8.1.0",
     "express": "^4.18.2",
     "immer": "^9.0.16",
+    "isomorphic-ws": "^5.0.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.2",
@@ -64,7 +68,6 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~4.8.2",
-    "ws": "^8.12.1",
     "zone.js": "~0.11.4"
   }
 }
