--- a/packages/sdk/src/package.json
+++ b/packages/sdk/src/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@elegante/sdk",
-  "version": "0.0.38",
+  "version": "0.0.39",
   "dependencies": {
     "cross-fetch": "^3.1.5",
     "rxjs": "^7.8.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "isomorphic-ws": "^5.0.0"
   },
   "types": "./index.d.ts",
   "module": "./index.js",
