--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "elegante",
+  "description": "Full application stack powered by Typescript and Mongodb",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
@@ -19,6 +20,8 @@
     "@angular/platform-browser": "15.1.5",
     "@angular/platform-browser-dynamic": "15.1.5",
     "@angular/router": "15.1.5",
+    "@clack/core": "^0.2.1",
+    "@clack/prompts": "^0.5.1",
     "@inrupt/jest-jsdom-polyfills": "^1.5.3",
     "@nrwl/angular": "15.7.2",
     "@nrwl/cli": "15.7.2",
@@ -36,9 +39,10 @@
     "@schematics/angular": "~15.1.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
+    "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/jest": "28.1.1",
-    "@types/node": "18.7.1",
+    "@types/node": "18.14.1",
     "@types/node-fetch": "^2.6.2",
     "@types/redux-watch": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -47,10 +51,12 @@
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
+    "ejs": "^3.1.8",
     "esbuild": "0.17.5",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "express": "^4.18.2",
+    "fs-extra": "^11.1.0",
     "immer": "^9.0.16",
     "isomorphic-ws": "^5.0.0",
     "jest": "28.1.1",
@@ -59,6 +65,7 @@
     "mongodb": "^4.12.1",
     "nx": "15.7.2",
     "password-validator": "^5.3.0",
+    "picocolors": "^1.0.0",
     "prettier": "^2.6.2",
     "redux-watch": "^1.2.0",
     "reflect-metadata": "^0.1.13",
