--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~4.8.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "valibot": "^0.19.0"
   }
 }
