--- a/apps/angular/project.json
+++ b/apps/angular/project.json
@@ -51,10 +51,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "angular:build:production"
+          "buildTarget": "angular:build:production"
         },
         "development": {
-          "browserTarget": "angular:build:development"
+          "buildTarget": "angular:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -62,15 +62,14 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "angular:build"
+        "buildTarget": "angular:build"
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/angular/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "apps/angular/jest.config.ts"
       }
     }
   },
