--- a/package.json
+++ b/package.json
@@ -10,66 +10,54 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.1.6",
-    "@angular-devkit/core": "~15.1.0",
-    "@angular-devkit/schematics": "~15.1.0",
-    "@angular/animations": "15.1.5",
-    "@angular/cli": "~15.1.0",
-    "@angular/common": "15.1.5",
-    "@angular/compiler": "15.1.5",
-    "@angular/compiler-cli": "15.1.5",
-    "@angular/core": "15.1.5",
-    "@angular/forms": "15.1.5",
-    "@angular/language-service": "15.1.5",
-    "@angular/platform-browser": "15.1.5",
-    "@angular/platform-browser-dynamic": "15.1.5",
-    "@angular/router": "15.1.5",
+    "@angular-devkit/build-angular": "17.1.1",
+    "@angular-devkit/core": "17.1.1",
+    "@angular-devkit/schematics": "17.1.1",
+    "@angular/animations": "17.1.1",
+    "@angular/cli": "~17.1.0",
+    "@angular/common": "17.1.1",
+    "@angular/compiler": "17.1.1",
+    "@angular/compiler-cli": "17.1.1",
+    "@angular/core": "17.1.1",
+    "@angular/forms": "17.1.1",
+    "@angular/language-service": "17.1.1",
+    "@angular/platform-browser": "17.1.1",
+    "@angular/platform-browser-dynamic": "17.1.1",
+    "@angular/router": "17.1.1",
     "@clack/core": "^0.2.1",
     "@clack/prompts": "^0.5.1",
     "@elysiajs/eden": "^0.8.1",
     "@inrupt/jest-jsdom-polyfills": "^1.5.3",
-    "@nrwl/angular": "15.7.2",
-    "@nrwl/cli": "15.7.2",
-    "@nrwl/devkit": "^15.7.2",
-    "@nrwl/esbuild": "15.7.2",
-    "@nrwl/eslint-plugin-nx": "15.7.2",
-    "@nrwl/jest": "15.7.2",
-    "@nrwl/js": "15.7.2",
-    "@nrwl/linter": "15.7.2",
-    "@nrwl/node": "15.7.2",
-    "@nrwl/nx-cloud": "15.0.3",
-    "@nrwl/rollup": "15.7.2",
-    "@nrwl/workspace": "15.7.2",
     "@reduxjs/toolkit": "^1.9.1",
-    "@schematics/angular": "~15.1.0",
+    "@schematics/angular": "17.1.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
-    "@types/jest": "28.1.1",
-    "@types/node": "18.14.1",
+    "@types/jest": "29.4.4",
+    "@types/node": "18.19.10",
     "@types/node-fetch": "^2.6.2",
     "@types/redux-watch": "^1.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "6.20.0",
+    "@typescript-eslint/parser": "6.20.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
     "ejs": "^3.1.8",
-    "esbuild": "0.17.5",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
+    "esbuild": "^0.19.2",
+    "eslint": "8.48.0",
+    "eslint-config-prettier": "9.1.0",
     "express": "^4.18.2",
     "fs-extra": "^11.1.0",
     "immer": "^9.0.16",
     "isomorphic-ws": "^5.0.0",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "~12.2.2",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
+    "jest-preset-angular": "13.1.6",
     "mongodb": "^5.8.0",
     "mongodb-memory-server": "^9.1.6",
-    "nx": "15.7.2",
+    "nx": "17.3.0",
     "password-validator": "^5.3.0",
     "picocolors": "^1.0.0",
     "prettier": "^2.6.2",
@@ -77,12 +65,22 @@
     "reflect-metadata": "^0.1.13",
     "rollup-plugin-typescript2": "^0.34.1",
     "rxjs": "^7.8.0",
-    "ts-jest": "28.0.5",
+    "ts-jest": "29.1.2",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~4.8.2",
+    "typescript": "5.3.3",
     "valibot": "^0.19.0",
-    "zone.js": "~0.11.4",
-    "elysia": "^0.8.15"
+    "zone.js": "0.14.3",
+    "elysia": "^0.8.15",
+    "@nx/devkit": "17.3.0",
+    "@nx/workspace": "17.3.0",
+    "@nx/js": "17.3.0",
+    "@nx/esbuild": "17.3.0",
+    "@nx/eslint-plugin": "17.3.0",
+    "@nx/eslint": "17.3.0",
+    "@nx/jest": "17.3.0",
+    "@nx/node": "17.3.0",
+    "@nx/rollup": "17.3.0",
+    "@nx/angular": "17.3.0"
   }
 }
