--- a/packages/sdk/project.json
+++ b/packages/sdk/project.json
@@ -5,7 +5,7 @@
   "projectType": "library",
   "targets": {
     "build": {
-      "executor": "@nrwl/rollup:rollup",
+      "executor": "@nx/rollup:rollup",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/sdk",
@@ -14,10 +14,10 @@
         "project": "packages/sdk/src/package.json",
         "compiler": "tsc",
         "format": ["cjs", "esm"],
-        "updateBuildableProjectDepsInPackageJson": false
+        "updateBuildableProjectDepsInPackageJson": false,
+        "babelUpwardRootMode": true
       }
     },
-
     "publish": {
       "executor": "nx:run-commands",
       "options": {
@@ -26,18 +26,14 @@
       "dependsOn": ["build"]
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["packages/sdk/**/*.ts"]
-      }
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/sdk/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "packages/sdk/jest.config.ts"
       }
     }
   },
