--- a/packages/server/project.json
+++ b/packages/server/project.json
@@ -5,20 +5,17 @@
   "projectType": "library",
   "targets": {
     "build": {
-      "executor": "@nrwl/js:tsc",
+      "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/server",
         "main": "packages/server/src/index.ts",
         "tsConfig": "packages/server/tsconfig.lib.json",
         "packageJson": "packages/server/package.json",
-        "updateBuildableProjectDepsInPackageJson": false,
-        "buildableProjectDepsInPackageJsonType": "dependencies",
         "external": "all",
         "externalBuildTargets": ["@elegante/sdk"]
       }
     },
-
     "publish": {
       "executor": "nx:run-commands",
       "options": {
@@ -27,18 +24,14 @@
       "dependsOn": ["build"]
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["packages/server/**/*.ts"]
-      }
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/server/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "packages/server/jest.config.ts"
       }
     }
   },
