--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,7 @@
     "resolveJsonModule": true,
     "paths": {
       "@borda/sdk": ["packages/sdk/src/index.ts"],
+      "@borda/client": ["packages/client/src/index.ts"],
       "@borda/server": ["packages/server/src/index.ts"],
       "@elegante/browser": ["packages/browser/src/index.ts"],
       "@elegante/sdk": ["packages/sdk/src/index.ts"],
