--- a/apps/elysia/tsconfig.json
+++ b/apps/elysia/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ESNext",
     "target": "ESNext",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
