--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "borda",
-  "description": "Full application stack powered by Typescript and Mongodb",
+  "private": true,
+  "description": "Full application stack powered by Bun, Typescript and Mongodb",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -10,7 +11,6 @@
     "test.server.watch": "nx test server --codeCoverage --watch",
     "serve.elysia": "bun run check.server.types && bun run --watch apps/elysia/index.ts"
   },
-  "private": true,
   "devDependencies": {
     "@angular-devkit/build-angular": "17.1.1",
     "@angular-devkit/core": "17.1.1",
@@ -28,8 +28,15 @@
     "@angular/router": "17.1.1",
     "@clack/core": "^0.2.1",
     "@clack/prompts": "^0.5.1",
-    "@elysiajs/eden": "^0.8.1",
+    "@elysiajs/cors": "^0.8.0",
+    "@elysiajs/html": "^0.8.0",
     "@inrupt/jest-jsdom-polyfills": "^1.5.3",
+    "@nx/angular": "17.3.0",
+    "@nx/devkit": "17.3.0",
+    "@nx/eslint": "17.3.0",
+    "@nx/jest": "17.3.0",
+    "@nx/js": "17.3.0",
+    "@nx/rollup": "^18.0.3",
     "@reduxjs/toolkit": "^1.9.1",
     "@schematics/angular": "17.1.1",
     "@types/bcryptjs": "^2.4.2",
@@ -44,16 +51,13 @@
     "@typescript-eslint/parser": "6.20.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^5.2.0",
-    "cors": "^2.8.5",
-    "cross-fetch": "^3.1.5",
     "ejs": "^3.1.8",
+    "elysia": "^0.8.16",
     "esbuild": "^0.19.2",
     "eslint": "8.48.0",
     "eslint-config-prettier": "9.1.0",
-    "express": "^4.18.2",
     "fs-extra": "^11.1.0",
     "immer": "^9.0.16",
-    "isomorphic-ws": "^5.0.0",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-preset-angular": "13.1.6",
@@ -65,27 +69,12 @@
     "prettier": "^2.6.2",
     "redux-watch": "^1.2.0",
     "reflect-metadata": "^0.1.13",
-    "rollup-plugin-typescript2": "^0.34.1",
-    "rxjs": "^7.8.0",
+    "rxjs": "^7.8.1",
     "ts-jest": "29.1.2",
     "ts-node": "10.9.1",
+    "tslib": "^2.6.2",
     "typescript": "5.3.3",
-    "valibot": "^0.19.0",
-    "zone.js": "0.14.3",
-    "elysia": "^0.8.16",
-    "@nx/devkit": "17.3.0",
-    "@nx/workspace": "17.3.0",
-    "@nx/js": "17.3.0",
-    "@nx/esbuild": "17.3.0",
-    "@nx/eslint-plugin": "17.3.0",
-    "@nx/eslint": "17.3.0",
-    "@nx/jest": "17.3.0",
-    "@nx/node": "17.3.0",
-    "@nx/rollup": "17.3.0",
-    "@nx/angular": "17.3.0",
-    "@elysiajs/cors": "^0.8.0",
-    "@elysiajs/html": "^0.8.0",
-    "tslib": "^2.6.2"
+    "zone.js": "0.14.3"
   },
   "dependencies": {}
 }
