--- a/packages/client/src/package.json
+++ b/packages/client/src/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@borda/client",
-  "version": "0.0.70",
+  "version": "0.0.1",
   "dependencies": {
-    "cross-fetch": "^3.1.5",
-    "rxjs": "^7.8.0",
-    "reflect-metadata": "^0.1.13",
-    "isomorphic-ws": "^5.0.0"
+    "rxjs": "^7.8.1",
+    "reflect-metadata": "^0.2.1"
   },
   "types": "./index.d.ts",
   "module": "./index.js",
