--- a/packages/client/tsconfig.lib.json
+++ b/packages/client/tsconfig.lib.json
@@ -6,6 +6,6 @@
     "types": ["node"]
   },
   "files": ["./src/package.json"],
-  "include": ["**/*.ts", "**/*.d.ts", "./src/package.json"],
+  "include": ["**/*.ts", "**/*.d.ts", "./package.json"],
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
 }
