--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test.server": "bun test server --codeCoverage",
     "test.server.coverage": "bunx http-server coverage/packages/server -c-1",
     "test.server.watch": "nx test server --codeCoverage --watch",
-    "serve.elysia": "bun run check.server.types && bun run --watch apps/elysia/index.ts"
+    "serve.elysia": "bun run check.server.types && bun run --watch apps/elysia/index.ts",
+    "serve.angular": "nx serve angular"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "17.1.1",
@@ -37,7 +38,7 @@
     "@nx/jest": "17.3.0",
     "@nx/js": "17.3.0",
     "@nx/rollup": "^18.0.3",
-    "@reduxjs/toolkit": "^1.9.1",
+    "@reduxjs/toolkit": "^2.1.0",
     "@schematics/angular": "17.1.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
@@ -57,7 +58,6 @@
     "eslint": "8.48.0",
     "eslint-config-prettier": "9.1.0",
     "fs-extra": "^11.1.0",
-    "immer": "^9.0.16",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-preset-angular": "13.1.6",
@@ -68,7 +68,7 @@
     "picocolors": "^1.0.0",
     "prettier": "^2.6.2",
     "redux-watch": "^1.2.0",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "ts-jest": "29.1.2",
     "ts-node": "10.9.1",
