--- a/packages/browser/src/package.json
+++ b/packages/browser/src/package.json
@@ -5,6 +5,8 @@
   "types": "./src/index.d.ts",
   "type": "module",
   "dependencies": {
-    "reflect-metadata": "0.1.13"
+    "reflect-metadata": "0.2.1",
+    "@reduxjs/toolkit": "^2.1.0",
+    "redux-watch": "^1.2.0"
   }
 }
