--- a/packages/browser/tsconfig.lib.json
+++ b/packages/browser/tsconfig.lib.json
@@ -6,7 +6,7 @@
     "sourceMap": false,
     "types": ["node"]
   },
-  "files": ["./src/package.json"],
-  "include": ["**/*.ts", "**/*.d.ts", "./src/package.json"],
+  "files": [],
+  "include": ["**/*.ts", "**/*.d.ts"],
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
 }
