--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "@nx/devkit": "17.3.0",
     "@nx/eslint": "17.3.0",
     "@nx/jest": "17.3.0",
-    "@nx/js": "17.3.0",
     "@nx/rollup": "^18.0.3",
     "@reduxjs/toolkit": "^2.1.0",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@schematics/angular": "17.1.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
@@ -69,12 +69,13 @@
     "prettier": "^2.6.2",
     "redux-watch": "^1.2.0",
     "reflect-metadata": "^0.2.1",
+    "rollup-plugin-generate-package-json": "^3.2.0",
+    "@rollup/plugin-json": "^6.1.0",
     "rxjs": "^7.8.1",
     "ts-jest": "29.1.2",
     "ts-node": "10.9.1",
     "tslib": "^2.6.2",
     "typescript": "5.3.3",
     "zone.js": "0.14.3"
-  },
-  "dependencies": {}
+  }
 }
