--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,20 +1,25 @@
 {
   "name": "@borda/server",
-  "version": "0.0.1",
-  "main": "src/index.js",
-  "types": "src/index.d.ts",
+  "version": "0.0.4",
   "files": [
-    "src",
-    "client",
+    "packages",
     "package.json",
-    "README.md"
+    "README.md",
+    "index.esm.js"
   ],
-  "dependencies": {
+  "peerDependencies": {
+    "@borda/client": "^0.0.0",
     "rxjs": "^7.8.0",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "bcryptjs": "^2.4.3",
     "password-validator": "^5.3.0",
-    "tslib": "^2.6.2"
-  }
+    "tslib": "^2.6.2",
+    "elysia": "^0.8.17",
+    "reflect-metadata": "^0.2.1"
+  },
+  "typings": "./packages/server/src/index.d.ts",
+  "module": "./index.esm.js",
+  "type": "module",
+  "main": "./index.esm.js"
 }
