--- a/packages/server/tsconfig.lib.json
+++ b/packages/server/tsconfig.lib.json
@@ -3,14 +3,18 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "declaration": true,
-    "types": ["node", "jest"]
+    "types": ["node"],
+    "skipLibCheck": true
   },
   "include": ["**/*.ts", "**/*.d.ts"],
   "exclude": [
     "jest.config.ts",
     "**/*.spec.ts",
     "**/*.test.ts",
+    "jest.setup.ts",
+    "jest.config.ts",
     "node_modules",
+    "node_modules/**",
     "test"
   ]
 }
