feat: add support to transform responses on fetch

--- a/nx.json
+++ b/nx.json
@@ -45,7 +45,7 @@
     "appsDir": "apps",
     "libsDir": "packages"
   },
-  "defaultProject": "express",
+  "defaultProject": "elysia",
   "generators": {
     "@nx/angular:application": {
       "style": "scss",
