chore: replace npm scripts with custom nx commands

--- a/packages/server/project.json
+++ b/packages/server/project.json
@@ -52,6 +52,12 @@
       "options": {
         "jestConfig": "packages/server/jest.config.ts"
       }
+    },
+    "coverage": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "bunx http-server coverage/packages/server -c-1"
+      }
     }
   },
   "tags": ["server"]
