--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@angular/router": "18.2.0",
     "@clack/core": "^0.2.1",
     "@clack/prompts": "^0.5.1",
-    "@elysiajs/cors": "^0.8.0",
-    "@elysiajs/html": "^0.8.0",
+    "@elysiajs/cors": "^1.1.0",
+    "@elysiajs/html": "^1.1.0",
     "@inrupt/jest-jsdom-polyfills": "^1.5.3",
     "@nx/angular": "19.6.4",
     "@nx/devkit": "19.6.4",
@@ -46,7 +46,7 @@
     "bcryptjs": "^2.4.3",
     "chalk": "^5.2.0",
     "ejs": "^3.1.8",
-    "elysia": "^0.8.17",
+    "elysia": "^1.1.9",
     "esbuild": "^0.19.2",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
@@ -74,6 +74,9 @@
     "dexie": "^4.0.8",
     "fake-indexeddb": "^6.0.0",
     "pluralize": "^8.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@elysiajs/eden": "^1.1.2",
+    "@elysiajs/stream": "^1.1.0",
+    "@faker-js/faker": "^8.4.1"
   }
 }
