--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "paths": {
+      "@/support": ["packages/support/src/index.ts"],
       "@borda/browser": ["packages/browser/src/index.ts"],
       "@borda/client": ["packages/client/src/index.ts"],
       "@borda/server": ["packages/server/src/index.ts"]
